--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="#24253C"
     tools:context=".MainActivity">
 
@@ -14,6 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_gravity="center"
         android:text="Log In"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
@@ -24,8 +26,8 @@
         app:layout_constraintVertical_bias="0" />
 
     <EditText
-        android:id="@+id/editTextText2"
-        android:layout_width="0dp"
+        android:id="@+id/edt_email"
+        android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
@@ -42,26 +44,26 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="0dp"
+        android:id="@+id/edt_password"
+        android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/edit_custom"
         android:ems="10"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:paddingLeft="15dp"
         android:textColor="#FFFFFF"
-        android:hint="@string/password"
         android:textColorHint="#8A8A96"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_email" />
 
     <CheckBox
         android:id="@+id/checkBox"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -69,11 +71,11 @@
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_password" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="0dp"
+        android:id="@+id/btn_logIn"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
@@ -86,7 +88,8 @@
         app:layout_constraintTop_toBottomOf="@+id/checkBox" />
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="92dp"
         android:layout_marginTop="16dp"
@@ -94,10 +97,10 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button">
+        app:layout_constraintTop_toBottomOf="@+id/btn_logIn">
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btn_findPassword"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_weight="48"
@@ -116,7 +119,7 @@
             android:background="#E91E63" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/btn_signUp"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_weight="48"
@@ -126,4 +129,4 @@
             android:textSize="10sp" />
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
