--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,13 @@
     </style>
 
     <style name="Theme.Union" parent="Base.Theme.Union" />
+
+    <style name="Theme.Union.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Union.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Union.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
